changed underlined color from pink to black

--- a/styles.css
+++ b/styles.css
@@ -161,7 +161,7 @@ img {
   height: 2px;
   top: 100%;
   left: 0;
-  background: var(--pink);
+  background: var(--black);
   transition: transform 0.5s;
   transform: scaleX(0);
   transform-origin: right;
