--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,7 @@ img {
 
 .nav-link {
   position: relative;
+  display: inline-block;
   padding: 0.5rem 0 0.2rem;
   font-size: 1.5rem;
   color: var(--black);
